# HybirdMongo-Monitor

./: Dockerfile  README.md  requirements.txt  setup.cfg
hybirdmongo_monitor/: opts.py  server.py
hybirdmongo_monitor/cmd/: monitor.py
