[metadata]
name = hybirdmongo_monitor
summary = LR DBaaS
description-file =
    README.rst
author = Lenovo Research
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    hybirdmongo_monitor

[entry_points]
console_scripts =
    hybirdmongo-monitor = hybirdmongo_monitor.cmd.monitor:main
oslo.config.opts =
    mongodb = hybirdmongo_monitor.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook
